// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group 1`] = `
<g
  class="silky-group  "
>
  foo
</g>
`;

exports[`Group with Emotion 1`] = `
.emotion-0 {
  color: black;
}

<g
  class="silky-group emotion-0 "
>
  foo
</g>
`;

exports[`Group with class 1`] = `
<g
  class="silky-group foo "
>
  foo
</g>
`;

exports[`Group with list of classes 1`] = `
<g
  class="silky-group foo bar baz"
>
  foo
</g>
`;
